fixed alignment of active top bar link

--- a/css/foundation.css
+++ b/css/foundation.css
@@ -5679,7 +5679,24 @@ ul.primary-nav li > a {
     -webkit-perspective: 35em; }
     .top-bar-section ul > li:hover {
       background: #81a73c; }
-    .top-bar-section ul > li::after {
+
+  .top-bar-section ul li > a {
+    line-height: 8.125rem;
+    font-family: "lexia", Georgia, serif;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: .05em;
+    text-shadow: 0 1px 0 white;
+    color: #726C64;
+    font-size: 0.9375rem;
+    text-align: center; }
+
+  .top-bar-section li.active:not(.has-form) {
+    border-top: solid 5px #95be49;
+    height: 7.8125rem;
+    position: relative;
+    z-index: 101; }
+    .top-bar-section li.active:not(.has-form)::after {
       -webkit-transform: rotateX(20deg);
       -moz-transform: rotate(7deg) translate(20px, 25px) skew(20deg);
       -ms-transform: rotate(7deg) translate(20px, 25px) skew(20deg);
@@ -5695,25 +5712,11 @@ ul.primary-nav li > a {
       content: "";
       box-shadow: 0 3px 8px rgba(0, 0, 0, 0.4); }
 
-  .top-bar-section ul li > a {
-    line-height: 8.125rem;
-    font-family: "lexia", Georgia, serif;
-    font-weight: 500;
-    text-transform: uppercase;
-    letter-spacing: .05em;
-    text-shadow: 0 1px 0 white;
-    color: #726C64;
-    font-size: 0.9375rem;
-    text-align: center; }
-
-  .top-bar-section li.active:not(.has-form) {
-    border-top: solid 5px #95be49;
-    position: relative;
-    z-index: 101; }
-
   .top-bar-section li.active:not(.has-form) a:not(.button) {
     background-color: #fff;
-    color: #95be49; }
+    color: #95be49;
+    height: 7.8125rem;
+    line-height: 7.5rem; }
     .top-bar-section li.active:not(.has-form) a:not(.button):hover {
       background-color: #fff; }
 
